prusti-tests/tests/parse/ui/forall_fail.stderr
error: expected parenthesized expression after quantifier
 --> $DIR/forall_fail.rs:9:12
  |
9 | #[requires(forall)]
  |            ^^^^^^

error: expected quantifier body
  --> $DIR/forall_fail.rs:12:12
   |
12 | #[requires(forall())]
   |            ^^^^^^

error: expected quantifier body
  --> $DIR/forall_fail.rs:15:12
   |
15 | #[requires(forall(|))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:18:12
   |
18 | #[requires(forall(||) 1+1)]
   |            ^^^^^^

error: quantifier arguments must have explicit types
  --> $DIR/forall_fail.rs:21:20
   |
21 | #[requires(forall(|a, b| true))]
   |                    ^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:24:12
   |
24 | #[requires(forall(||) || forall(||))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:27:12
   |
27 | #[requires(forall(|| 1+1 == 1+1, triggers=[(1,)]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:30:12
   |
30 | #[requires(forall(|| true, triggers=[(1,2), (1,)]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:33:12
   |
33 | #[requires(forall(|| true, triggers=1))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:36:12
   |
36 | #[requires(forall(||))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:39:12
   |
39 | #[requires(forall(|| 1+1 == 1+1))]
   |            ^^^^^^

error: expected quantifier body
  --> $DIR/forall_fail.rs:42:12
   |
42 | #[requires(forall(||, triggers=[]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:45:12
   |
45 | #[requires(forall(|| 1+1 == 1+1, triggers=[(1,)]))]
   |            ^^^^^^

error: trigger sets must be tuples of expressions
  --> $DIR/forall_fail.rs:48:43
   |
48 | #[requires(forall(|a: i32| true, triggers=[1]))]
   |                                           ^^^

error: trigger sets must be tuples of expressions
  --> $DIR/forall_fail.rs:51:43
   |
51 | #[requires(forall(|a: i32| true, triggers=[(1, 2), 1,]))]
   |                                           ^^^^^^^^^^^^

error: aborting due to 15 previous errors

